--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-weather-react",
-  "homepage": "https://abdelilah-elaziri.github.io/app-weather-react",
+  "homepage": "https://nguyenhoang81.github.io/du-bao-thoi-tiet",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
